@@ -1,3 +1,8 @@
+2006-09-20  Sven Neumann  <sven@gimp.org>
+
+	* app/paint/gimpperspectiveclone.c: removed unused variables and
+	unused macro.
+
 2006-09-20  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimpsourcecore.c: implement GimpPaintCore::start()
